# cityscape

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  prefect.yaml  pyproject.toml
.devcontainer/: devcontainer.json
dbt/: .env.example  dbt_project.yml
dbt/models/core/mlb/: core_mlb__games.sql
dbt/models/core/nba/: core_nba__games.sql
dbt/models/core/nfl/: core_nfl__games.sql
dbt/models/core/nhl/: core_nhl__games.sql
dbt/models/staging/: sources.yml
dbt/models/staging/mlb/: stg_mlb__games.sql  stg_mlb__schema.yml  stg_mlb__teams.sql
dbt/models/staging/nba/: stg_nba__games.sql  stg_nba__schema.yml  stg_nba__teams.sql
dbt/models/staging/nfl/: stg_nfl__games.sql  stg_nfl__schema.yml  stg_nfl__teams.sql
dbt/models/staging/nhl/: stg_nhl__games.sql  stg_nhl__schema.yml  stg_nhl__teams.sql
src/cityscape/: __init__.py  __main__.py  cli.py  settings.py
src/cityscape/automations/ingest/: mlb.py
src/cityscape/automations/prefect/: mlb.py
src/cityscape/integrations/: http.py
src/cityscape/integrations/mlb/: __init__.py  statsapi.py
src/cityscape/prefect/: __init__.py
src/cityscape/utils/: db.py  logger.py  settings.py
tests/: test_smoke.py
