[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"


[project]
name = "cityscape"
version = "0.1.0"
description = "Cityscape: data platform + orchestration workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"prefect>=2.16",
	"dbt-postgres>=1.7",
	"MLB-StatsAPI",
	"httpx>=0.28",
	"psycopg2-binary>=2.9",
]

[project.scripts]
cityscape = "cityscape.cli:main"

[project.optional-dependencies]
dev = [
	"pytest>=8",
	"ruff>=0.3",
]


[tool.hatch.build.targets.wheel]
packages = ["src/cityscape"]


[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

